[package]
name = "deser"
version = "0.1.0"
authors = ["Vikram Narayanan <vikram186@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde_derive = "1.0.101"
serde = "1.0.1"
bincode = "1.0.1"
serde_repr = "0.1"
